[package]
name = "actoirs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
rand = "0.8.5"
csv = "1.2.2"
serde = { version = "1.0.188", features = ["derive"] }
async-trait = "0.1.73"
